UY-1269 CR-703 minor fixes